--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,10 +12,18 @@ set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 
 # Enable mouse support in ~/.tmux.conf
-set-option -g mouse on 
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+setw -g mode-mouse on
+set -g mouse-select-window on
+
+# Use vim like key bindings
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+
+# Copy to system clipboard
+# Must work with xclip
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # Tmux uses a 'control key', let's set it to 'Ctrl-a'
 # Reason: 'Ctrl-a' is easier to reach than 'Ctrl-b'
