--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,27 +4,24 @@
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
 
-# UTF is great, let us use that
-set -g utf8
-set-window-option -g utf8 on
 
 # Tmux should be pretty, we need 256 color for that
 set -g default-terminal "screen-256color"
 
 # Enable mouse support in ~/.tmux.conf
-setw -g mode-mouse on
-set -g mouse-select-window on
-set-option -g mouse on
+#setw -g mode-mouse on
+#set -g mouse-select-window on
+set -g mouse on
 
-# Use vim like key bindings
+# Use vim like key bindings # for new tmux version
 bind P paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Copy to system clipboard
 # Must work with xclip
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind -T vi-copy y copy-pipe "xclip -sel clip -i"
 
 # Tmux uses a 'control key', let's set it to 'Ctrl-a'
 # Reason: 'Ctrl-a' is easier to reach than 'Ctrl-b'
@@ -51,30 +48,27 @@ bind - split-window -v
 
 # Smart pane switching with awareness of Vim splits.
 # # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+#is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    #| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+#bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+#bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+#bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+#bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+#bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-<<<<<<< HEAD
-# Copy & Paste
-bind P paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
-=======
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'christoomey/vim-tmux-navigator'<Paste>
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+#set -g @themepack 'powerline/block/cyan'
+set -g @themepack 'powerline/block/blue'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
->>>>>>> 892c5bd29beed84de89fb62ef4a713a7667b66fc
