--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-# This file is originated from https://www.codementor.io/linux/tutorial/configure-linux-toolset-zsh-tmux-vim
 # ### Date created: Jan 26, 2017 
 
 # set Zsh as your default Tmux shell
@@ -48,27 +47,26 @@ bind - split-window -v
 
 # Smart pane switching with awareness of Vim splits.
 # # See: https://github.com/christoomey/vim-tmux-navigator
-#is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    #| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-#bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-#bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-#bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-#bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-#bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'christoomey/vim-tmux-navigator'<Paste>
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 #set -g @themepack 'powerline/block/cyan'
 set -g @themepack 'powerline/block/blue'
+
+bind-key l next-window
+bind-key h previous-window
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
